# python-service-scaffold

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.circleci/: config.yml
docs/assets/postgresql/: db-init.sql
docs/decisions/: README.md
migrations/: env.py
migrations/versions/: 0b32d595c19a_.py  37eeb23d1f61_.py  e3fafd6a2948_.py
tests/: conftest.py
tests/unit/graphql/schema/: test_users.py
user_service/application/usecases/: users.py
user_service/domain/: value_objects.py
user_service/domain/entities/: user_entity.py
user_service/domain/repositories/database/: user_repository.py
user_service/infrastructure/: setup.py
user_service/infrastructure/settings/: __init__.py  logging.py  settings.py
user_service/infrastructure/sqlalchemy/: database.py
user_service/infrastructure/sqlalchemy/models/: user.py
user_service/infrastructure/sqlalchemy/repositories/: __init__.py  user_repository_impl.py
user_service/interfaces/cli/: __init__.py  db.py  service.py
user_service/interfaces/graphql/: context.py  graphql.py  permissions.py
user_service/interfaces/graphql/schema/: mutation.py  query.py  responses.py
